# actor-zeta

./: .appveyor.yml  .clang-format  .clang-tidy  .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  LICENSE  README.md  actor-zeta.hpp  build_local.sh  conan.cmake  conanfile.txt  description.h  docker-compose.yml  doxygen_config.txt
benchmark/actors/scheduled/: CMakeLists.txt  counters.cpp  define_actor.hpp  define_supervisor.hpp  fixtures.hpp  main.cpp
benchmark/actors/single_threaded/: CMakeLists.txt  define_supervisor.hpp  fixtures.hpp
benchmark/actors/singlethreaded/: CMakeLists.txt  define_actor.hpp  define_supervisor.hpp  enums.hpp  fixtures.hpp  main.cpp
benchmark/message/: CMakeLists.txt  body_rtt.cpp  body_tuple.cpp  fixtures.hpp  main.cpp  message.cpp  register_benchmark.hpp  rtt_message.cpp
core/: CMakeLists.txt
core/actor-zeta/: config.hpp  core.hpp  flat_map.hpp  forwards.hpp  intrusive_ptr.hpp  metadata.hpp  ref_counted.hpp  spinlock.hpp
core/actor-zeta/actor/: abstract_action.hpp  abstract_actor.hpp  abstract_async_container.hpp  actor.hpp  actor_address.hpp  async_actor.hpp  base_actor.hpp  basic_actor.hpp  blocking_actor.hpp  communication_module.hpp  context.hpp  cooperative_actor.hpp  dispatcher.hpp  executable_actor.hpp  handler.hpp  local_actor.hpp  message_passing_interface.hpp  metadata.hpp  monitorable_actor.hpp  reactions.hpp  supervisor.hpp  type_action.hpp
core/actor-zeta/base/: abstract_actor.hpp  actor.hpp  actor_address.hpp  basic_actor.hpp  blocking_actor.hpp  communication_module.hpp  context.hpp  cooperative_actor.hpp  handler.hpp  supervisor.hpp
core/actor-zeta/behavior/: abstract_action.hpp  context.hpp  reactions.hpp  type_action.hpp
core/actor-zeta/channel/: abstract_channel.hpp  channel.hpp
core/actor-zeta/contaner/: flat_hash_map.hpp  flat_hash_table.hpp
core/actor-zeta/detail/: adjacency_list.hpp  any.hpp  callable_trait.hpp  experimental_any.hpp  intrusive_list.hpp  intrusive_list_old.hpp  ref_counted.hpp  spinlock.hpp  storage_space.hpp  string_view.hpp  type_list.hpp  type_traits.hpp
core/actor-zeta/environment/: abstract_environment.hpp  abstract_group.hpp  adjacency_list.hpp  cooperation.hpp  environment.hpp  group.hpp  storage_space.hpp
core/actor-zeta/executor/: abstract_coordinator.hpp  abstract_executor.hpp  coordinator.hpp  (+6 more)
core/header/: await_all_actors_done.hpp  environment.hpp  forwards.hpp  fwd.hpp  intrusive_ptr.hpp  log.hpp  ref_counted.hpp  shutdown.hpp
core/source/: await_all_actors_done.cpp  log.cpp  ref_counted.cpp  shutdown.cpp  spinlock.cpp
core/test/: CMakeLists.txt
environment/: CMakeLists.txt
environment/actor-zeta/: abstract_environment.hpp  environment.hpp  network_environment.hpp  supervisor_heavy.hpp
environment/source/: abstract_environment.cpp  environment.cpp  network_environment.cpp  storage_space.cpp  supervisor_heavy.cpp
examples/: CMakeLists.txt
examples/add_method/: CMakeLists.txt  main.cpp
examples/balancer/: CMakeLists.txt  main.cpp
examples/broadcast/: CMakeLists.txt  main.cpp
examples/communication/: CMakeLists.txt  main.cpp
examples/complex-hierarchy/: CMakeLists.txt  main.cpp
examples/custom_environment/: CMakeLists.txt  main.cpp
examples/dataflow/: CMakeLists.txt  main.cpp  memusage.hpp
examples/delegate/: CMakeLists.txt  main.cpp
examples/dynamic-behavior/: CMakeLists.txt  main.cpp
examples/flat_map/: main.cpp
examples/groups/: CMakeLists.txt  main.cpp
examples/key-value-storage/: CMakeLists.txt  main.cpp
examples/local_start/: CMakeLists.txt  main.cpp
examples/smart-send/: CMakeLists.txt  main.cpp
examples/spawn/: CMakeLists.txt  main.cpp
examples/spawn-actor/: CMakeLists.txt  main.cpp
examples/spawn-supervisor/: CMakeLists.txt  main.cpp
examples/spawn_actor/: CMakeLists.txt  main.cpp
examples/spawn_supervisor/: CMakeLists.txt  main.cpp
examples/testsuite/: CMakeLists.txt  forwards.hpp
examples/timer/: CMakeLists.txt  main.cpp
io/: CMakeLists.txt
io/actor-zeta/: forwards.hpp
io/source/: broker.cpp
libactor_zeta_core/: CMakeLists.txt
libactor_zeta_core/actor-zeta/: any.hpp  await_all_actors_done.hpp  command.hpp  environment.hpp  forwards.hpp  intrusive_ptr.hpp  log.hpp  metadata.hpp  ref_counted.hpp
libactor_zeta_core/source/: await_all_actors_done.cpp  environment.cpp  log.cpp  ref_counted.cpp  shutdown.cpp
libactor_zeta_io/: CMakeLists.txt
libactor_zeta_io/actor-zeta/: broker.hpp  connection.hpp  connection_handler.hpp  forwards.hpp  multiplexer.hpp
libactor_zeta_io/source/: broker.cpp  broker.сpp  connection_identifying.cpp
libactor_zeta_io/test/: README.md
test/: CMakeLists.txt
test/actor-id/: CMakeLists.txt  main.cpp
test/any/: CMakeLists.txt  classes.hpp  main.cpp
test/behavior/: CMakeLists.txt  main.cpp
test/flat_map/: CMakeLists.txt  main.cpp
test/handler/: CMakeLists.txt  classes.hpp  main.cpp
test/id/: CMakeLists.txt  main.cpp
test/intrusive_ptr/: CMakeLists.txt  classes.hpp  main.cpp
test/life-cycle/: CMakeLists.txt  classes.hpp  main.cpp
test/memory_resource/: CMakeLists.txt  classes.hpp  main.cpp
test/message/: CMakeLists.txt  classes.hpp  main.cpp
test/message-id/: CMakeLists.txt  main.cpp
test/metaprogramming/: CMakeLists.txt  classes.hpp  main.cpp
test/non_copy_obj/: CMakeLists.txt  main.cpp
test/polymorphic_allocator/: CMakeLists.txt  classes.hpp  controlled_allocators.hpp  main.cpp  test_memory_resource.hpp  type_id.hpp
test/queue/: CMakeLists.txt  cached_queue.cpp  fifo_inbox.cpp  fixed_queue.cpp  fixture.hpp  inode.hpp  lifo_inbox.cpp  main.cpp  queue.cpp  task_queue.cpp
test/rtt/: CMakeLists.txt  classes.hpp  main.cpp
test/spawn/: CMakeLists.txt  classes.hpp  main.cpp
test/spawn-actor/: CMakeLists.txt  classes.hpp  main.cpp
test/string_view/: CMakeLists.txt  classes.hpp  main.cpp
test/timer/: CMakeLists.txt  classes.hpp  main.cpp
test/tooltestsuites/: CMakeLists.txt  clock_test.cpp  clock_test.hpp  scheduler_test.cpp  scheduler_test.hpp  supervisor_test.hpp
test/unique_function/: CMakeLists.txt  main.cpp
test/utils/: unused.hpp
(+1662 files in other folders)
