include_directories(.)
include_directories(../header/)
#add_subdirectory(testsuite)
add_subdirectory(add_method)
add_subdirectory(smart-send)
add_subdirectory(delegate)
add_subdirectory(spawn_actor)
add_subdirectory(spawn_supervisor)
add_subdirectory(communication)
#add_subdirectory(key-value-storage)
